repositories/ibm-charts/ibm-redis-ha-dev/1.0.0/README.md
# `@helm-charts/ibm-charts-ibm-redis-ha-dev`

Highly available Redis cluster with multiple sentinels and standbys.

| Field               | Value            |
| ------------------- | ---------------- |
| Repository Name     | ibm-charts       |
| Chart Name          | ibm-redis-ha-dev |
| Chart Version       | 1.0.0            |
| NPM Package Version | 0.1.0            |

<details>

<summary>Helm chart `values.yaml` (default values)</summary>

```yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
#  IBM Corporation - initial API and implementation
###############################################################################

# Specify architecture (amd64, ppc64le, s390x) and weight to be  used for scheduling as follows :
#   0 - Do not use
#   1 - Least preferred
#   2 - No preference
#   3 - Most preferred
arch:
  amd64: '2 - No preference'
  ppc64le: '2 - No preference'

## Redis image version
image:
  repository: ibmcom/redis-ha
  tag: 4.0.6-r0
  # user pullPolicy of Always if tag is latest
  pullPolicy: IfNotPresent

replicas:
  servers: 3
  sentinels: 3

serverService:
  type: ClusterIP # [ClusterIP|LoadBalancer]

rbac:
  # Specifies whether RBAC resources should be created
  create: true

serviceAccount:
  # Specifies whether a ServiceAccount should be created
  create: true
  # The name of the ServiceAccount to use.
  # If not set and create is true, a name is generated using the fullname template
  name:

## Configure resource requests and limits
## ref: http://kubernetes.io/docs/user-guide/compute-resources/
##
resources:
  server:
    requests:
      memory: 200Mi
      cpu: 100m
    limits:
      memory: 700Mi
      cpu: 100m
  sentinel:
    requests:
      memory: 200Mi
      cpu: 100m
    limits:
      memory: 200Mi
      cpu: 100m
```

</details>

---

# ibm-redis-ha-dev

## Introduction

This chart bootstraps a high availability [Redis](https://redis.io) deployment on a [Kubernetes](http://kubernetes.io) cluster using the [Helm](https://helm.sh) package manager.

## Chart Details

The customized Redis server image determines whether the pod that executes it will be a Redis Sentinel,
Master, or Slave and launches the appropriate service. This Helm chart signals Sentinel status with
environment variables. If not set, the newly launched pod will query K8S for an active master. If none
exists, it uses a deterministic means of sensing whether it should launch as master then writes "master"
or "slave" to the label called redis-role as appropriate. It's this label that determines which LB a pod
can be seen through.

The redis-role=master pod is the key for the cluster to get started. Sentinels will wait for it to appear
in the LB before they finish launching. All other pods wait for the Sentinels to ID the master. Running
Pods also set the labels podIP and runID. runID is the first few characters of the unique run_id value
generated by each Redis sever.

During normal operation, there should be only one redis-role=master pod. If it fails, the Sentinels
will nominate a new master and change all the redis-role values appropriately.

By default this chart installs 1 master, 2 slaves and 3 sentinels.

## Prerequisites

- Kubernetes 1.7+ with Beta APIs enabled

## Installing the Chart

To install the chart

```bash
$ helm install --name <release-name> stable/ibm-redis-ha-dev
```

The command deploys Redis on the Kubernetes cluster in the default configuration. By default this chart install one master pod containing redis master container and sentinel container, 2 sentinels and 1 redis slave. The [configuration](#configuration) section lists the parameters that can be configured during installation.

> **Tip**: List all releases using `helm list`

## Verifying the Chart

See NOTES.txt associated with this chart for verification instructions.

## Uninstalling the Chart

To uninstall/delete the deployment:

```bash
$ helm delete --purge <release-name>
```

The command removes all the Kubernetes components associated with the chart and deletes the release.

## Configuration

The following tables lists the configurable parameters of the Redis chart and their default values.

| Parameter                            | Description                                                                  | Default                   |
| ------------------------------------ | ---------------------------------------------------------------------------- | ------------------------- |
| `arch.amd64`                         | Preference to run on amd64 architecture                                      | `2 - No preference`       |
| `arch.ppc64le`                       | Preference to run on ppc64le architecture                                    | `2 - No preference`       |
| `image.repository`                   | Redis image repo                                                             | `ibmcom/redis-ha`         |
| `image.tag`                          | Redis image tag                                                              | `4.0.6-r0`                |
| `image.pullPolicy`                   | Redis image pull policy                                                      | `IfNotPresent`            |
| `replicas.servers`                   | Number of redis master/slave pods                                            | `3`                       |
| `replicas.sentinels`                 | Number of sentinel pods                                                      | `3`                       |
| `serverService.type`                 | Set to "LoadBalancer" to enable access from the VPC                          | `ClusterIP`               |
| `rbac.create`                        | Create a RBAC resource                                                       | `true`                    |
| `serviceAccount.create`              | Create a service account                                                     | `true`                    |
| `serviceAccount.name`                | Service account name to use. The chart template _fullname_ is used if blank. | _chart template fullname_ |
| `resources.server.requests.memory`   | Server memory resource requests                                              | `200Mi`                   |
| `resources.server.requests.cpu`      | Server CPU resource requests                                                 | `100m`                    |
| `resources.server.limits.memory`     | Server Memory resource limits                                                | `700Mi`                   |
| `resources.server.limits.cpu`        | Server CPU resource limits                                                   | `100m`                    |
| `resources.sentinel.requests.memory` | Sentinel memory resource requests                                            | `200Mi`                   |
| `resources.sentinel.requests.cpu`    | Sentinel CPU resource requests                                               | `100m`                    |
| `resources.sentinel.limits.memory`   | Sentinel Memory resource limits                                              | `200Mi`                   |
| `resources.sentinel.limits.cpu`      | Sentinel CPU resource limits                                                 | `100m`                    |

Specify each parameter using the `--set key=value[,key=value]` argument to `helm install`. For example,

```bash
$ helm install \
  --set replicas.servers=2 \
    stable/ibm-redis-ha-dev
```

The above command sets the Redis server within `default` namespace.

Alternatively, a YAML file that specifies the values for the parameters can be provided while installing the chart. For example,

```bash
$ helm install -f values.yaml stable/ibm-redis-ha-dev
```

> **Tip**: You can use the default [values.yaml](values.yaml)
